--- a/Cubos - Módulo 1/desafio-modulo-1/style.css
+++ b/Cubos - Módulo 1/desafio-modulo-1/style.css
@@ -6,18 +6,22 @@
 body {
     margin: 0;
     background-color: #E5E5E5;
-    flex: 0 1 1440px;
 }
 
 .header {
     margin-bottom: 56px;
     background-color: #FFFFFF;
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.12);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex: 0 1 1440px;
+    width: 100%;
 }
 
 .header-center {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     flex: 0 1 1160px;
     padding: 1em;
@@ -31,6 +35,7 @@ body {
     list-style-type: none;
     display: flex;
     justify-content: space-around;
+    align-items: center;
 }
 
 .header-center > ul > li > a {
@@ -40,13 +45,15 @@ body {
     color: #545454;
 }
 
-/* .main {
+.main {
+    display: flex;
+    justify-content: center;
     flex: 0 1 1440px;
-} */
+}
 
 .main-center {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: flex-start;
     flex: 0 1 1160px;
 }
@@ -55,7 +62,7 @@ body {
     margin-right: 50px;
 }
 
-.post {
+.post, .feed-contact {
     margin-bottom: 40px;
     max-width: 730px;
     background-color: #FFFFFF;
@@ -65,7 +72,7 @@ body {
     flex-direction: column;
 }
 
-.post-header, .post-main {
+.post-header, .post-main, .post-main-extended, .feed-contact {
     padding: 24px;
 }
 
@@ -96,19 +103,73 @@ body {
 .post-button {
     background-color: white;
     align-self: flex-end;
-    font-size: 14px;
-    color: #545454;
     border: 1px solid #FE0078;
     border-radius: 25px;
     padding: 1em 1.5em;
     margin: 12px 24px 24px;
 }
 
+.post-button > a {
+    text-decoration: none;
+    font-size: 14px;
+    color: #545454;
+}
+
 .side-menu {
-    max-width: 380px;
+    min-width: 380px;
+    padding: 1em;
     background-color: #FFFFFF;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.12);
     border-radius: 4px;
+}
+
+input {
+    min-width: 340px;
+    padding: 1em;
+    font-size: 14px;
+    color: #545454;
+    border: 1px solid #EEEEEE;
+    border-radius: 10px;
+}
+
+input:hover {
+    border: 1px solid #FE0078;
+}
+
+.side-menu > h2 {
+    font-size: 18px;
+    padding-left: 11px;
+    border-left: 3px solid #FE0078;
+    margin: 32px 0 40px;
+}
+
+tr {
+    min-width: 340px;
+    display: flex;
+    justify-content: space-between;
+    padding: 16px 11px;
+    border-bottom: 2px dashed #EEEEEE;
+}
+
+tr:hover {
+    border-bottom: 2px dashed #FE0078;
+}
+
+td {
+    font-size: 14px;
+    color: #545454;
+}
+
+.ads {
+    min-width: 340px;
+    min-height: 240px;
+    background-color: #EEEEEE;
+    font-size: 36px;
+    color: #545454;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 32px;
 }
 
 .footer {
@@ -118,4 +179,116 @@ body {
     text-align: center;
     color: white;
     margin-top: 64px;
+    width: 100%;
+}
+
+/* Post */
+
+.post-main-extended > p, .post-main-extended > ul, blockquote {
+    font-size: 14px;
+    color: #000000;
+    margin: 0 0 24px;
+}
+
+.post-main-extended > ul > ul {
+    margin: 0;
+}
+
+blockquote {
+    border-left: 4px solid #FE0078;
+    padding-left: 32px;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+}
+
+.form-line {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 24px;
+}
+
+label {
+    font-size: 14px;
+    display: inline-block;
+}
+
+label > input, textarea {
+    border: 1px solid #EEEEEE;
+    border-radius: 2px;
+    display: block;
+    margin-top: 8px;
+    width: 100%;
+}
+
+textarea {
+    display: flex;
+    align-items: stretch;
+    flex: 0 0 700px;
+}
+
+textarea:hover {
+    border: 1px solid #FE0078;
+}
+
+.form-button {
+    font-weight: 700;
+    font-size: 14px;
+    color: white;
+    padding: 12px 24px;
+    background-color: #FE0078;
+    border: none;
+    border-radius: 20px;
+    align-self: flex-end;
+    margin-top: 48px;
+}
+
+/* Contact */
+
+.feed-contact > h2, .feed-contact > h3, .feed-contact > p {
+    margin: 0;
+}
+
+.feed-contact > p {
+    font-size: 14px;
+    line-height: 19px;
+}
+
+.feed-contact > h2 {
+    margin-bottom: 24px;
+}
+
+.feed-contact > h3 {
+    margin-top: 32px;
+    margin-bottom: 24px;
+}
+
+.contact-info {
+    font-size: 14px;
+    margin: 0;
+}
+
+.contact-info > p {
+    margin-bottom: 24px;
+}
+
+.contact-info > p:last-child {
+    margin-bottom: 0;
+}
+
+.info-title {
+    display: flex;
+    align-content: center;
+    margin-bottom: 13px;
+}
+
+.info-title > img {
+    margin-right: 8px;
+}
+
+.subject {
+    width: 100%;
+    margin-bottom: 24px;
 }
